@@ -1026,7 +1026,7 @@ validateReadableStdout(void) {
   error message about a file I/O error.  We, on the other hand, produce
   a helpful error message.
 -----------------------------------------------------------------------------*/
-#if !defined(WIN32) || defined(__CYGWIN__)
+#if !MSVCRT
 
     int flags;
 
